ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-engine: /

spec:
  rules:
  - host: a9c57d1d1c3394af4995cea2f12841a4-861546799.eu-central-1.elb.amazonaws.com
    http:
      paths:
      - path: /mywork
        backend:
          serviceName: mywork-svc
          servicePort: 3000
      - path: /challenge
        backend:
          serviceName: challenge-svc
          servicePort: 3001
